--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     padding: 0;
 }
 
+ol {
+    list-style-position: inside;
+}
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
